style.css
* {
    margin: 0;
    padding: 0;
    border: none;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}

.borders{
	border: 0px solid #5d5d5d3d;;
}

html {
    font-size: 10px;
}

body {
	font-family: Work Sans,Helvetica,Arial,sans-serif;
	font-weight: 400;
	font-size: 1.6rem;
	line-height: 1.8;
	color: #5d5d5d;
}
	
a {
	color: #5d5d5d;
	text-decoration: none;
	outline: none;
	transition: color 0.25s ease;
}

.nav__list-item a:hover{
	color: #63a2d8;
}

a:visited{
	text-decoration: none;
	color: #5d5d5d;
}

ul {
	margin: 0;
	padding: 0;
}

nav {
	padding: 20px 0px 50px;
	align-items: center;
}

.logo img{
	height: 85px;
	transition: .5s all ease;
}

.logo img:hover{
	opacity: .75;
}

.turned-off img{
	transform: rotate(-20deg);
}


.container {
    display: -ms-flexbox;
    display: flex;
    -ms-flex-flow: row wrap;
    flex-flow: row wrap;
    width: 90%;
    max-width: 1400px;
    margin-right: auto;
    margin-left: auto;
}

.nav__brand{
	flex: 1;
}

.nav__list{
	flex: 1;
	margin: 0;
  padding: 0;
  text-align: right;
}

.nav__list-item {
    display: inline-block;
    padding: 0 20px;
    letter-spacing: .5px;
    font-size: 1.8rem;
}

@media only screen and (max-width: 655px) {
	.nav__list{
	flex: 0;
	}
}
	
.intro__link{
	color: #2594d4 !important;
}

.intro__link:hover {
	color: inherit !important;
}

.intro__link. .intro__link:visited, .intro__link:active{
	color: blue !important;
}

.intro {
	position: relative;
	max-width: 840px;
	letter-spacing: -1px;
	line-height: 1.7;
	font-size: 3rem;
	font-weight: 400;
}
	
@media screen and (min-width: 768px) {
.intro {
    line-height: 55px;
    font-size: 3.4rem;
	}
.secondary-header {
    font-size: 3.8rem !important;
}
}

.speech-bubble {
	  margin-bottom: 120px;
    border: 2px solid #aad4f5;
    border-radius: 10px;
    padding: 22px 36px;
    position: relative;
		box-shadow: 3px 3px 20px rgba(0, 0, 0, 0.2);
}

.invisible{
	visibility:hidden;
}

.speech-bubble-arrow {
    border-left: 21px solid transparent;
    bottom: -25px;
    position: absolute;
    right: 15px;
}

.speech-bubble-arrow::before {
    border-right: 27px solid transparent;
    border-bottom: 27px solid #aad4f5;
    top: -328px;
    content: "";
    position: absolute;
    right: 824px;
}

.speech-bubble-arrow:after {
		border-right: 23px solid transparent;
    border-bottom: 25px solid #ffffff;
    top: -324px;
    content: "";
    position: absolute;
    right: 826px;
}

@media screen and (max-width: 1000px) {
.speech-bubble-arrow::before, .speech-bubble-arrow:after {
    visibility: hidden;
	}
}
	
.contact-button{
	background-color: #ffffff;
	height: 40px;
	width: 125px;
	border-radius: 30px;
	color: #ffffff;
	align-items: center;
  display: flex;
	justify-content:center;
	box-shadow: 3px 3px 20px rgba(0, 0, 0, 0.2);
	margin: 20px 0 5px 0;
	transition: .25s all ease;
	border: 1px solid #aad4f5;
	font-weight: 600;
  letter-spacing: 0.7px;
	color: #2588c2;
}

.contact-button:hover{
	color: #ffffff;
	background-color: #2588c2;
}

.back-button{
	background-color: #ffffff;
	height: 40px;
	width: 125px;
	border-radius: 30px;
	color: #ffffff;
	align-items: center;
  display: flex;
	justify-content:center;
	box-shadow: 3px 3px 20px rgba(0, 0, 0, 0.2);
	margin: 20px 0 5px 0;
	transition: .25s all ease;
	border: 1px solid #aad4f5;
	font-weight: 600;
  letter-spacing: 0.7px;
	color: #2588c2;
}

.back-button-container{
	margin: auto;
}

.back-button:hover{
	color: #ffffff;
	background-color: #2588c2;
}


.arrow-circle{
	border-radius: 50%;
	height: 25px;
	width: 25px;
	background-color: #075785;
	margin-left: 10px;
	text-align: center;
	color: #ffffff !important;
}

.side-email{
		position: fixed;
    height: 276px;
    width: 40px;
    background-color: white;
    right: -10px;
    top: 187px;
    border-radius: 12px;
    border: 2px solid #aad4f5;
		transition: all .25s ease;
		color: #aad4f5;
}

.side-email__text{
		transform: rotate(90deg);
    padding: 0 20px;
    font-size: 1.8rem;
	  display: inline-block;
		position: fixed;
		right: -36px;
    top: 212px;
		color: inherit;
}
	
.side-email:hover{
	background-color:  #aad4f5;
	color: #ffffff; 
}
	

.secondary-header {
    display: flex;
    flex: 1 1 100%;
    margin-bottom: .5em;
    letter-spacing: -1px;
    font-size: 3rem;
    font-weight: 400;
}

.work__list {
    width: 100%;
    margin: 0;
    padding: 0 5px;
}

.work-title {
    flex: 3 1 100%;
    margin-bottom: 0;
    color: #34a4e4;
    letter-spacing: 0;
    line-height: 1.2;
    font-size: 2.6rem;
}

.work__list-item {
    transform: translateY(0);
    display: block;
    padding: 18px 5% 20px;
    border-bottom: 1px solid #dadada;
    box-shadow: 0 0 0 rgba(93,93,93,.16);
    background: linear-gradient(#fbfbfb,#fbfbfb);
    transition: all .3s ease;
    list-style: none;
}

.work__list-item-link {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    max-width: 1400px;
    margin-right: auto;
    margin-left: auto;
}

.work-detail {
    font-size: 1.6rem;
}

.work-detail, .work-title {
    font-weight: 400;
    transition: color .3s ease;
}

.work-role {
    flex: 3 1 100%;
}

.work__list-item:active, .work__list-item:focus, .work__list-item:hover {
    transform: translateY(-3px);
    border-color: transparent;
    box-shadow: 0 1px 6px rgba(93,93,93,.16);
    background: linear-gradient(90deg,#54b2e8,#59b4e9,#57b3e9);
    color: #ffffff;
}

@media screen and (min-width: 768px){
.work-role {
    flex: 1 1 60%;
}
	.work-company {
    flex: 1 1 20%;
}
	.work-date {
    flex: 1 1 20%;
    align-self: flex-end;
    text-align: right;
}
}

.work__list-item:active .work-detail, .work__list-item:active .work-title, .work__list-item:focus .work-detail, .work__list-item:focus .work-title, .work__list-item:hover .work-detail, .work__list-item:hover .work-title {
    color: #fff;

}

.additional-info{
	visibility: hidden;	
}

.visible{
	visibility: visible;
}

label {
    display:block;
    margin-top:20px;
    letter-spacing:2px;
		font-weight: 600;
}

form {
  border-radius: 10px;
	width: 440px;
	box-shadow: none;
	border: 0;
	padding: 5px 20px;
	margin: 0 auto;
}

@media screen and (min-width: 768px) {
form {
			border: 2px solid #aad4f5;
		padding: 28px 78px;
    box-shadow: 3px 3px 20px rgba(0, 0, 0, 0.2);
	margin: 0;
	}
}

input, textarea {
    width:95%;
    height:27px;
    background:#efefef;
    border:1px solid #dedede;
    padding:10px;
    margin-top:3px;
    font-size:0.9em;
    color:#3a3a3a;
    border-radius:5px;
}

textarea {
	height:213px;
}

input:focus, textarea:focus {
    border:1px solid #97d6eb;
}

#submit {
    width:127px;
    height:38px;
    cursor:pointer;
    background-color: #ffffff;
    border-radius: 30px;
    align-items: center;
    display: flex;
    justify-content: center;
    margin: 20px 0 5px 0;
    transition: .25s all ease;
    border: 1px solid #aad4f5;
    font-weight: 600;
    letter-spacing: 0.7px;
    color: #2588c2;
		padding-top: 7px;
	  box-shadow: 3px 3px 20px rgba(0, 0, 0, 0.2);
}

	#submit:hover {
		background-color: #2588c2;
		color: #fff;
	}

#contact-form{
	margin-top: 120px;
	margin-bottom: 50px;
	flex: 1;
}

.contact__flavor{
	color: #aad4f5;
	text-indent: 10px;
}

.contact-links {
	display: block;
}

.contact-links a{
	padding-right: 10px;
}

.contact-links a:hover{
	opacity: 0.5;
}

.contact-links img{
		width: 60px;
}

.email-address{
	margin: 20px 0 0 7px;
	font-size: 2rem;
	color: #0097de;
}

@-webkit-keyframes tracking-in-expand{0%{letter-spacing:-.5em;opacity:0}40%{opacity:.6}100%{opacity:1}}@keyframes tracking-in-expand{0%{letter-spacing:-.5em;opacity:0}40%{opacity:.6}100%{opacity:1}}

.text-trans{
  font-size: 2.5rem;
  -webkit-animation: tracking-in-expand 1s;
}

.email-link{
	cursor: pointer;
}

@media screen and (max-width: 768px) {
	.email-address{
	font-size: 1.7rem;
}
	.text-trans{
  font-size: 1.7rem;
}
	.contact__flavor{
	font-size: 50%;
}
	.contact-links img{
		width: 40px;
	}
	.speech-bubble {
    padding: 10px 20px;
		margin-bottom: 60px;
}
	#contact-form {
    margin-top: 60px;
}
}

img{
    user-select: none;
}

.project-hero {
    display: flex;
    width: 100%;
    margin-bottom: 3em;
	justify-content: center;
}

.hero-header {
    margin: auto 5% auto 0;
    max-width: 640px;
}

.project-label {
    margin-bottom: 1em;
    letter-spacing: 3px;
    text-transform: uppercase;
    font-size: 1.5rem;
    font-weight: 300;
}

.project-title {
    letter-spacing: -1.5px;
    line-height: 1.7;
    font-size: 2.8rem;
    font-weight: 400;
}

@media screen and (min-width: 768px){
.project-hero {
    min-height: 300px;
}
.project-title {
    font-size: 3.8rem;
}
}

.inline-image{
}

.inline-image img{
	width: 1440px;
	max-width: 100%;
}

.project-intro {
    padding: 3em 0 2em;
    background: #fff;
}

@media screen and (min-width: 768px){
.project-intro {
    padding: 7em 0 4em;
}
}

.lede-content {
    margin: auto;
    max-width: 640px;
    font-size: 2.8rem;
    letter-spacing: -.5px;
}

.lede {
    line-height: 1.7;
    font-size: 1.8rem;
}

@media screen and (min-width: 768px){
.lede {
    font-size: 2.2rem;
}
} 

.project-step {
    padding: 2em 0 0;
    background: #fff;
    text-align: center;
}

@media screen and (min-width: 768px){
.project-step {
    padding: 4em 0 0;
}
}

.step-content {
    padding: 2em 0 1em;
    text-align: left;
    max-width: 740px;
    margin: auto;
}

@media screen and (min-width: 768px){
.step-content {
    padding: 8em 0 4em;
}
}

.step-body {
    margin-bottom: .5em;
    letter-spacing: -.5px;
    font-size: 1.6rem;
}

@media screen and (min-width: 768px){
.step-body {
    font-size: 2.2rem;
}
}

.lede a, .lede a:visited, .lede a:active{
    color: #2594d4;
}

.lede a:hover{
	color: #5d5d5d; !important;
}

